--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Clean Blog
+title: Dave on Software
 header-img: img/home-bg.jpg
 email: your-email@yourdomain.com
-copyright_name: Your/Project/Corporate Name
-description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
+copyright_name: Dave Diehl
+description: "Testing the Jekyll engine"
+baseurl: ""
+url: "http://agiledavediehl.com"
 twitter_username: SBootstrap
-github_username:  davidtmiller
+github_username:  davediehl
 facebook_username:  IronSummitMedia
 email_username:  your-email@yourdomain.com
 
