Changed Site Description

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: Dave on DevOps
 header-img: img/home-bg.jpg
 email: dadiehl@gmail.com
 copyright_name: Dave Diehl
-description: "Testing the Jekyll engine"
+description: "Thoughts on using DevOps and Agile to make software teams more effective"
 baseurl: ""
-url: "http://agiledavediehl.com"
+url: "http://daveondevops.com"
 twitter_username: agiledavediehl
 github_username:  davediehl
 email_username:  dadiehl@gmail.com
